# CC_Homework3

./: .gitignore  Boilerplate.sln  CMakeLists.txt  DateResponse.cpp  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
Application/: CMakeLists.txt
Client/: CMakeLists.txt  Client.vcxproj.filters  count.txt  misc.txt
Client/Client.dir/Debug/Client.tlog/: CL.read.1.tlog  custombuild.write.1.tlog  link.write.1.tlog
Client/include/: HandshakeRequest.h  RequestsManager.h  Session.h  SumRequest.h
Client/source/: HandshakeRequest.cpp  Main.cpp  RequestsManager.cpp  Session.cpp
Documentation/: CCTools.docx
Framework/: CMakeLists.txt  Framework.vcxproj  Framework.vcxproj.filters
Framework/Framework.dir/Debug/Framework.tlog/: Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  custombuild.command.1.tlog  custombuild.write.1.tlog
Framework/include/: IDataPacket.h  IDataPacketsManager.h  IRequest.h  IResponse.h  Response.h
Framework/source/: Main.cpp  Response.cpp  placeholder.cpp
Homework_1/Draghici Andrei/Tema_1_Cloud_Computing-master/: Tema_1_Cloud_Computing.sln
Homework_1/Draghici Andrei/Tema_1_Cloud_Computing-master/Debug/: Tema_1_Cloud_Computing.ilk
Homework_1/Draghici Andrei/Tema_1_Cloud_Computing-master/Tema_1_Cloud_Computing/: Tema_1_Cloud_Computing.cpp  Tema_1_Cloud_Computing.vcxproj  Tema_1_Cloud_Computing.vcxproj.filters  Utils.h  Vechile.cpp  Vechile.h
Homework_1/Draghici Andrei/Tema_1_Cloud_Computing-master/Tema_1_Cloud_Computing/Debug/: vc142.idb
Homework_1/Murea Calin - Tema 1/: Tema1.sln
Homework_1/Murea Calin - Tema 1/Debug/: Tema1.ilk
Homework_1/Murea Calin - Tema 1/Tema1/: Source.cpp  Tema1.vcxproj  Tema1.vcxproj.filters  Utils.h  Vehicle.cpp  Vehicle.h
Homework_1/Murea Calin - Tema 1/Tema1/Debug/: vc141.idb
Homework_1/Murea Calin - Tema 1/Tema1/Debug/Tema1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tema1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Homework_1/Petrenciuc Robert/Cloud_Tema1/: Cloud_Tema1.sln
Homework_1/Petrenciuc Robert/Cloud_Tema1/Cloud_Tema1/: Cloud_Tema1.vcxproj  Cloud_Tema1.vcxproj.filters  Source.cpp  Utils.h  Vehicle.h
Homework_1/Petrenciuc Robert/Cloud_Tema1/Cloud_Tema1/Debug/: vc141.idb
Homework_2/Draghici Andrei/Tema_2_Cloud_Computing/: Tema_2_Cloud_Computing.sln
Homework_2/Draghici Andrei/Tema_2_Cloud_Computing/Debug/: Tema_2_Cloud_Computing.ilk
Homework_2/Draghici Andrei/Tema_2_Cloud_Computing/Tema_2_Cloud_Computing/: Tema_2_Cloud_Computing.cpp  Tema_2_Cloud_Computing.vcxproj  Tema_2_Cloud_Computing.vcxproj.filters  Wallet.cpp  Wallet.h
Homework_2/Draghici Andrei/Tema_2_Cloud_Computing/Tema_2_Cloud_Computing/Debug/: vc142.idb
Homework_2/Murea Calin - Tema2/: Tema2_1.sln
Homework_2/Murea Calin - Tema2/Debug/: Tema2_1.ilk
Homework_2/Murea Calin - Tema2/Tema2_1/: Multithreading-Full.cpp  Tema2_1.vcxproj  Tema2_1.vcxproj.filters  Wallet.cpp
Homework_2/Murea Calin - Tema2/Tema2_1/Debug/: vc141.idb
Homework_2/Murea Calin - Tema2/Tema2_1/Debug/Tema2_1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Tema2_1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Homework_2/Petrenciuc Robert/Cloud_tema2/: Cloud_tema2.sln
Homework_2/Petrenciuc Robert/Cloud_tema2/Cloud_tema2/: Cloud_tema2.vcxproj  Cloud_tema2.vcxproj.filters  Source.cpp  Wallet.h
Homework_2/Petrenciuc Robert/Cloud_tema2/Debug/: Cloud_tema2.ilk
Homework_3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  DateResponse.cpp  cmake_install.cmake
Homework_3/Client/: CMakeLists.txt  Client.vcxproj  cmake_install.cmake  sum.txt
Homework_3/Client/include/: DateRequest.cpp  DateRequest.h  WordCountRequest.h
Homework_3/Client/source/: Main.cpp  Session.cpp  SumRequest.cpp  WordCountRequest.cpp
Homework_3/Framework/: CMakeLists.txt  cmake_install.cmake
Homework_3/Framework/include/: IResponseFactory.h  Request.h
Homework_3/Framework/source/: Request.cpp
Homework_3/Scripts/: CMakeGener.bat
Homework_3/Server/: Server.vcxproj.filters
Homework_3/Server/include/: DateResponse.cpp  HandshakeResponse.h  Listener.h
Homework_3/Server/source/: HandshakeResponse.cpp  Listener.cpp  Main.cpp  ResponseFactory.cpp  Session.cpp  SumResponse.cpp
Scripts/: CMakeClean.bat  CMakeRegenerateLinux.sh  CMakeRegenerateWindows.bat
Server/: CMakeLists.txt  Server.vcxproj  cmake_install.cmake
Server/include/: DateResponse.h  Listener.h  ResponseFactory.h  ResponsesManager.h  Session.h  SumResponse.h  WordCountResponse.h
Server/source/: Listener.cpp  Main.cpp  ResponsesManager.cpp  Session.cpp  WordCountResponse.cpp
(+49 files in other folders)
